fix(setup): add Alpine Linux (musl) wheel platform tag support
- Detect Alpine Linux by checking /etc/alpine-release
- Use linux_musl_{arch} tag for Alpine wheels instead of manylinux2014
- Add debug output to show built wheel filenames
- Fixes wheel compatibility issue when testing on Alpine Linux

--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -35,7 +35,10 @@ runs:
         PROJECT_ROOT: ${{github.workspace}}
 
     - name: Build wheel
-      run: uv build --wheel
+      run: |
+        uv build --wheel
+        echo "Built wheels:"
+        ls -lh dist/*.whl || echo "No wheels found in dist/"
       shell: sh
       env:
         PROJECT_ROOT: ${{github.workspace}}
