chore(ci): remove debug logs from build and test actions
- Remove echo statements and directory listings from test-wheel action
- Remove wheel listing debug output from build-wheel action
- Keep essential error messages for troubleshooting

--- a/.github/actions/build-wheel/action.yml
+++ b/.github/actions/build-wheel/action.yml
@@ -35,10 +35,7 @@ runs:
         PROJECT_ROOT: ${{github.workspace}}
 
     - name: Build wheel
-      run: |
-        uv build --wheel
-        echo "Built wheels:"
-        ls -lh dist/*.whl || echo "No wheels found in dist/"
+      run: uv build --wheel
       shell: sh
       env:
         PROJECT_ROOT: ${{github.workspace}}
