Fix COBOL scanner compilation issues and add patch mechanism
- Fix typo: 'installlation' -> 'installation' in scanner.c
- Add proper type casts for towupper/towlower functions for cross-platform compatibility
- Add patch mechanism to apply fixes after cloning vendors
- Update CI workflow to use mkdir -p to handle existing parsers directory

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Clone vendors
         run: |
-          mkdir parsers
+          mkdir -p parsers
           uv run --no-sync scripts/clone_vendors.py
 
       - name: Upload Parsers
