Fix cache key to use patches instead of parsers directory
- Change hashFiles from 'parsers/**/*' to 'patches/**/*'
- This avoids failures when parsers directory doesn't exist yet
- Patches are tracked in git and affect the build output

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -133,7 +133,7 @@ jobs:
           path: |
             dist
             *.whl
-          key: ${{ matrix.os }}-build-${{ hashFiles('sources/**/*', 'parsers/**/*', 'setup.py') }}
+          key: ${{ matrix.os }}-build-${{ hashFiles('sources/**/*', 'patches/**/*', 'setup.py') }}
 
       - name: Build wheel
         if: steps.cache-build.outputs.cache-hit != 'true'
